tests/Rule/data/constants/traits-11-a.php
<?php declare(strict_types = 1);

namespace DeadTraitConst11;

trait SomeTrait {
    const FOO = 1; // error: Unused DeadTraitConst11\SomeTrait::FOO
}


